
  * Added high scores saving.

  * Enhanced cut/copy/paste	for text editing. (TODO: PromptWidget)

  * Added undo and redo to text editing. (TODO: PromptWidget)

  * Added wildcard support to launcher dialog filter.

  * Added option to search subdirectories in launcher.

  * Added static tooltips to some UI items.

  * Added dynamic tooltips to most debugger items.

  * Increased sample size for CDFJ+.

  * Fixed autofire bug for trackball controllers.

  * Codebase now uses C++17 features.

-Have fun!


6.3 to 6.4 (November 2, 2020)

  * Added basic (entire and single line only) text cut/copy and paste.

  * Added color parameters to 'Custom' palette.

  * Some improvements to AtariVox-USB adaptor functionality:
    - Made serial port used for an AtariVox-USB adaptor editable.
    - Autodetection of serial ports no longer messes up devices plugged
      into other serial ports.

  * Added CPU load stats to debugger.  Related to this, added debugger
    pseudo-registers '_ftimreadcycles' and '_fwsynccycles' to show the
    number of cycles since the start of frame under certain circumstances
    (see manual for more details).

  * Fixed bug with aspect correction and fullscreen mode; snapshots from
    such a mode are now pixel-exact.

  * Fixed a bug that caused CDF ROMs to crash on the Retron77 and reduced
    ARM emulation performance for CDF ROMs on other platforms.

  * Fixed crash with missing or incorrectly sized SaveKey data file, and
    with certain functions not working (erase pages, erase entire EEPROM).

  * Fixed Atari mouse autodetection.

  * Fixed bug in ROM launcher, with last ROM selected not being remembered
    when exiting and re-entering a directory.


6.2.1 to 6.3 (October 7, 2020)

  * Added adjustable autofire.

  * Added 'Dark' UI theme.

  * Extended global hotkeys for debug options.

  * Added option to playback a game using the Time Machine.

  * Allow taking snapshots from within the Time Machine dialog.
