@@ -53,6 +53,7 @@ WhatsNewDialog::WhatsNewDialog(OSystem& osystem, DialogContainer& parent, const 
   add(ypos, "added wildcard support to launcher dialog filter");
   add(ypos, "added option to search subdirectories in launcher");
   add(ypos, "added tooltips to many UI items");
+  add(ypos, "added sound to Time Machine playback");
   add(ypos, "increased sample size for CDFJ+");
   add(ypos, ELLIPSIS + " (for a complete list see 'docs/Changes.txt')");
 #endif
